# heart-failure-readmission-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  eval.yml
docker/: supervisord.conf
docker/langfuse-selfhost/: README.md  docker-compose.yml
docs/: hipaa_design.md
evals/rag/: queries.jsonl  retrieval_eval.yaml
evals/scenarios/: adversarial_scenarios.yaml  seed_scenarios.yaml
src/heart_failure_readmission.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/hf_readmit/: README.md  __init__.py  config.py
src/hf_readmit/agent/: __init__.py  catalog.py  graph.py  prompts.py  run.py  samples.py  state.py  tools.py
src/hf_readmit/api/: __init__.py  app.py  run.py
src/hf_readmit/data/: __init__.py  cohort.py  features.py
src/hf_readmit/eval/: __init__.py  __main__.py  agent_eval.py  harness.py  placeholders.py  ragas_eval.py  run.py  scenarios.py  schemas.py
src/hf_readmit/llm/: __init__.py  client.py
src/hf_readmit/models/: __init__.py  explain.py  predictor.py  run_training.py  train.py
src/hf_readmit/rag/: __init__.py  bm25_index.py  eval.py  ingest.py  retriever.py  run_ingest.py
src/hf_readmit/ui/: __init__.py  app.py  clinician.py  monitoring.py
src/hf_readmit/utils/: logging.py
tests/: conftest.py  test_agent.py  test_api.py  test_eval_full.py  test_eval_harness.py  test_model_pipeline.py  test_package.py  test_rag.py
