[project]
name = "heart-failure-readmission"
version = "0.1.0"
description = "Heart failure 30-day readmission risk model and guideline-grounded discharge planning agent."
readme = "README.md"
authors = [
    { name = "Portfolio Developer", email = "dev@example.com" }
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "pydantic>=2.8,<3",
    "pydantic-settings>=2.0,<3",
    "python-dotenv>=1.0,<2",
    "PyYAML>=6.0,<7",
    "langchain>=0.3,<0.4",
    "langchain-openai>=0.2,<0.3",
    "langchain-anthropic>=0.3,<0.4",
    "langchain-community>=0.3,<0.4",
    "langchain-chroma>=0.1,<0.2",
    "chromadb>=1.5,<2",
    "openai>=1.0,<3",
    "langgraph>=0.2,<0.3",
    "langfuse>=2.50,<3",
    "rank-bm25>=0.2,<0.3",
    "pypdf>=5.0,<6",
    "unstructured[pdf]>=0.16,<0.17",
    "ragas>=0.2,<0.3",
    "fastapi>=0.115,<0.116",
    "uvicorn>=0.34,<0.35",
    "streamlit>=1.41,<2",
    "plotly>=5.24,<6",
    "pandas>=2.0,<3",
    "xgboost>=3.0,<4",
    "scikit-learn>=1.9,<2",
    "shap>=0.52,<0.53",
    "mlflow>=3.13,<4",
    "pytest>=8.0,<9"
]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/yourname/heart-failure-readmission"
"Source" = "https://github.com/yourname/heart-failure-readmission"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=65.0","wheel"]
build-backend = "setuptools.build_meta"
